Initial commit: Secure Issue Tracker Backend