@@ -2,109 +2,81 @@ package com.sintu.issue_tracker.service;
 
 import com.sintu.issue_tracker.dto.CreateTicketRequest;
 import com.sintu.issue_tracker.dto.TicketResponse;
-import com.sintu.issue_tracker.dto.UpdateTicketStatusRequest;
+import com.sintu.issue_tracker.model.Priority;
 import com.sintu.issue_tracker.model.Ticket;
 import com.sintu.issue_tracker.model.TicketStatus;
 import com.sintu.issue_tracker.model.User;
 import com.sintu.issue_tracker.repository.TicketRepository;
-import com.sintu.issue_tracker.repository.UserRepository;
 import org.springframework.stereotype.Service;
 
-import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class TicketService {
 
     private final TicketRepository ticketRepository;
-    private final UserRepository userRepository;
 
-    public TicketService(TicketRepository ticketRepository,
-                         UserRepository userRepository) {
+    public TicketService(TicketRepository ticketRepository) {
         this.ticketRepository = ticketRepository;
-        this.userRepository = userRepository;
     }
 
-    // CREATE TICKET
-    public TicketResponse createTicket(CreateTicketRequest request) {
-        User creator = userRepository.findById(request.getCreatedByUserId())
-                .orElseThrow(() -> new RuntimeException("User not found"));
+    public TicketResponse createTicket(CreateTicketRequest request, User user) {
+        Ticket ticket = new Ticket();
+        ticket.setTitle(request.getTitle());
+        ticket.setDescription(request.getDescription());
+        ticket.setCategory(request.getCategory());
+        ticket.setBlockName(request.getBlockName()); 
+        ticket.setRoomNo(request.getRoomNo());
+        // Default to MEDIUM if no priority is sent
+        ticket.setPriority(request.getPriority() != null ? request.getPriority() : Priority.MEDIUM);
+        ticket.setStatus(TicketStatus.OPEN);
+        ticket.setCreatedBy(user);
 
-        Ticket ticket = Ticket.builder()
-                .title(request.getTitle())
-                .description(request.getDescription())
-                .category(request.getCategory())
-                .location(request.getLocation())
-                .priority(request.getPriority())
-                .status(TicketStatus.OPEN)
-                .createdBy(creator)
-                .createdAt(LocalDateTime.now())
-                .updatedAt(LocalDateTime.now())
-                .build();
-
-        Ticket saved = ticketRepository.save(ticket);
-
-        return new TicketResponse(
-                saved.getId(),
-                saved.getTitle(),
-                saved.getDescription(),
-                saved.getCategory(),
-                saved.getLocation(),
-                saved.getPriority(),
-                saved.getStatus()
-        );
+        Ticket savedTicket = ticketRepository.save(ticket);
+        return mapToResponse(savedTicket);
     }
 
-    // LIST TICKETS FOR A USER
-    public List<TicketResponse> getTicketsByUser(Long userId) {
-        User creator = userRepository.findById(userId)
-                .orElseThrow(() -> new RuntimeException("User not found"));
-
-        return ticketRepository.findByCreatedBy(creator)
+    // For Students: Get only their tickets
+    public List<TicketResponse> getTicketsByUser(User user) {
+        return ticketRepository.findByCreatedBy(user)
                 .stream()
-                .map(t -> new TicketResponse(
-                        t.getId(),
-                        t.getTitle(),
-                        t.getDescription(),
-                        t.getCategory(),
-                        t.getLocation(),
-                        t.getPriority(),
-                        t.getStatus()
-                ))
-                .toList();
+                .map(this::mapToResponse)
+                .collect(Collectors.toList());
     }
 
-    // UPDATE STATUS / ASSIGNMENT
-    public TicketResponse updateTicketStatus(Long ticketId, UpdateTicketStatusRequest request) {
-        Ticket ticket = ticketRepository.findById(ticketId)
-                .orElseThrow(() -> new RuntimeException("Ticket not found"));
+    // For Admin: Get ALL tickets
+    public List<TicketResponse> getAllTickets() {
+        return ticketRepository.findAll()
+                .stream()
+                .map(this::mapToResponse)
+                .collect(Collectors.toList());
+    }
 
-        if (request.getAssignedToUserId() != null) {
-            User assignee = userRepository.findById(request.getAssignedToUserId())
-                    .orElseThrow(() -> new RuntimeException("Assignee not found"));
-            ticket.setAssignedTo(assignee);
-        }
+    // 👇 THIS WAS MISSING: For Admin to filter by status
+    public List<TicketResponse> getTicketsByStatus(TicketStatus status) {
+        return ticketRepository.findByStatus(status)
+                .stream()
+                .map(this::mapToResponse)
+                .collect(Collectors.toList());
+    }
 
-        if (request.getStatus() != null) {
-            ticket.setStatus(request.getStatus());
-        }
-
-        ticket.setUpdatedAt(LocalDateTime.now());
-        if (ticket.getStatus() == TicketStatus.RESOLVED
-                || ticket.getStatus() == TicketStatus.CLOSED) {
-            ticket.setResolvedAt(LocalDateTime.now());
-        }
-
-        Ticket saved = ticketRepository.save(ticket);
-
-        return new TicketResponse(
-                saved.getId(),
-                saved.getTitle(),
-                saved.getDescription(),
-                saved.getCategory(),
-                saved.getLocation(),
-                saved.getPriority(),
-                saved.getStatus()
-        );
+    private TicketResponse mapToResponse(Ticket ticket) {
+        return TicketResponse.builder()
+                .id(ticket.getId())
+                .title(ticket.getTitle())
+                .description(ticket.getDescription())
+                .category(ticket.getCategory())
+                .priority(ticket.getPriority())
+                .status(ticket.getStatus())
+                .blockName(ticket.getBlockName())
+                .roomNo(ticket.getRoomNo())
+                .location(ticket.getLocation())
+                .createdByName(ticket.getCreatedBy().getName())
+                // Safe check for null assigned user
+                .assignedToName(ticket.getAssignedTo() != null ? ticket.getAssignedTo().getName() : null)
+                .createdAt(ticket.getCreatedAt())
+                .resolvedAt(ticket.getResolvedAt())
+                .build();
     }
 }
